<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

  <TextView
      android:id="@+id/lblPropName"
      android:layout_width="120dp"
      android:layout_height="30dp"
      android:layout_marginStart="15dp"
      android:text="@string/tv_propname"
      app:layout_constraintBottom_toBottomOf="@+id/tvPropName"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/tvPropName"
      app:layout_constraintVertical_bias="0.615" />

  <Button
      android:id="@+id/btnCreate"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="50dp"
      android:layout_marginTop="40dp"
      android:layout_marginEnd="50dp"
      android:text="@string/btn_create"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tvRpName" />

  <EditText
      android:id="@+id/tvPropName"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_marginTop="164dp"
      android:layout_marginEnd="25dp"
      android:ems="10"
      android:inputType="textPersonName"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toEndOf="@+id/lblPropName"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/lblPropAddress"
      android:layout_width="120dp"
      android:layout_height="30dp"
      android:layout_marginStart="15dp"
      android:text="@string/tv_propaddress"
      app:layout_constraintBottom_toBottomOf="@+id/tvPropAddress"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/tvPropAddress" />

  <TextView
      android:id="@+id/tvError"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="4dp"
      app:layout_constraintBottom_toTopOf="@+id/tvPropName"
      app:layout_constraintEnd_toEndOf="@+id/tvPropName"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="@+id/lblPropName" />

  <EditText
      android:id="@+id/tvPropAddress"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="25dp"
      android:ems="10"
      android:inputType="textPersonName"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/lblPropAddress"
      app:layout_constraintTop_toBottomOf="@+id/tvPropName" />

  <EditText
      android:id="@+id/tvPropType"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="25dp"
      android:ems="10"
      android:inputType="textPersonName"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/lblPropType"
      app:layout_constraintTop_toBottomOf="@+id/tvPropAddress" />

  <TextView
      android:id="@+id/lblPropType"
      android:layout_width="120dp"
      android:layout_height="30dp"
      android:layout_marginStart="15dp"
      android:text="@string/tv_proptype"
      app:layout_constraintBottom_toBottomOf="@+id/tvPropType"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/tvPropType" />

  <TextView
      android:id="@+id/lblBedrooms"
      android:layout_width="120dp"
      android:layout_height="30dp"
      android:layout_marginStart="15dp"
      android:text="@string/tv_bedrooms"
      app:layout_constraintBottom_toBottomOf="@+id/tvBedrooms"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/tvBedrooms" />

  <TextView
      android:id="@+id/lblDateAdd"
      android:layout_width="120dp"
      android:layout_height="30dp"
      android:layout_marginStart="15dp"
      android:text="@string/tv_dateadd"
      app:layout_constraintBottom_toBottomOf="@+id/tvDateAdd"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/tvDateAdd" />

  <TextView
      android:id="@+id/lblPrice"
      android:layout_width="120dp"
      android:layout_height="30dp"
      android:layout_marginStart="15dp"
      android:text="@string/tv_price"
      app:layout_constraintBottom_toBottomOf="@+id/tvPrice"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/tvPrice" />

  <TextView
      android:id="@+id/lblFurType"
      android:layout_width="120dp"
      android:layout_height="30dp"
      android:layout_marginStart="15dp"
      android:text="@string/tv_furtype"
      app:layout_constraintBottom_toBottomOf="@+id/tvFurType"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/tvFurType" />

  <TextView
      android:id="@+id/lblRpName"
      android:layout_width="120dp"
      android:layout_height="30dp"
      android:layout_marginStart="15dp"
      android:text="@string/tv_rpname"
      app:layout_constraintBottom_toBottomOf="@+id/tvRpName"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/tvRpName" />

  <TextView
      android:id="@+id/lblNote"
      android:layout_width="120dp"
      android:layout_height="30dp"
      android:layout_marginStart="15dp"
      android:text="@string/tv_note"
      app:layout_constraintBottom_toBottomOf="@+id/tvNote"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/tvNote" />

  <EditText
      android:id="@+id/tvBedrooms"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="25dp"
      android:ems="10"
      android:inputType="textPersonName"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/lblBedrooms"
      app:layout_constraintTop_toBottomOf="@+id/tvPropType" />

  <EditText
      android:id="@+id/tvPrice"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="25dp"
      android:ems="10"
      android:inputType="number"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toEndOf="@+id/lblPrice"
      app:layout_constraintTop_toBottomOf="@+id/tvDateAdd" />

  <EditText
      android:id="@+id/tvFurType"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="25dp"
      android:ems="10"
      android:inputType="textPersonName"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toEndOf="@+id/lblFurType"
      app:layout_constraintTop_toBottomOf="@+id/tvPrice" />

  <EditText
      android:id="@+id/tvNote"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="25dp"
      android:ems="10"
      android:inputType="textPersonName"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toEndOf="@+id/lblNote"
      app:layout_constraintTop_toBottomOf="@+id/tvFurType" />

  <EditText
      android:id="@+id/tvRpName"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="25dp"
      android:ems="10"
      android:inputType="textPersonName"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toEndOf="@+id/lblRpName"
      app:layout_constraintTop_toBottomOf="@+id/tvNote" />

  <EditText
      android:id="@+id/tvDateAdd"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="25dp"
      android:ems="10"
      android:inputType="textPersonName"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/lblDateAdd"
      app:layout_constraintTop_toBottomOf="@+id/tvBedrooms" />

</androidx.constraintlayout.widget.ConstraintLayout>